5.1 AWS Basics/terraform/vpc/sg.tf
resource "aws_security_group" "web-sg" {
  name        = "web-sg"
  vpc_id      = aws_vpc.vpc.id

  dynamic "ingress" {
    for_each = ["80", "443", "22"]
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      #cidr_blocks = ["77.222.239.91/32"] # for my IP address
      cidr_blocks = ["0.0.0.0/0"]         # for convenience
    }
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-${var.project}"
  }
}
